after jose puts yahoo poller

--- a/importer/build.gradle
+++ b/importer/build.gradle
@@ -1,3 +1,10 @@
-project(":importer"){
 
+project(":importer"){
+    dependencies{
+        compile project(":domain")
+        compile group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.4.0'
+    }
+
+    apply plugin: 'application'
+    mainClassName= "com.marionete.stock.importer.Importer"
 }
