--- a/messaging/build.gradle
+++ b/messaging/build.gradle
@@ -6,7 +6,8 @@ project (":messaging"){
     dependencies{
 
         compile "io.confluent:kafka-avro-serializer:3.0.0"
-        compile  "org.apache.kafka:kafka-clients:version:$kafkaVersion"
+        // https://mvnrepository.com/artifact/org.apache.kafka/kafka_2.11
+        compile group: 'org.apache.kafka', name: 'kafka_2.11', version: '0.10.0.0'
         compile group: 'com.sksamuel.avro4s', name: 'avro4s-core_2.11', version: '1.5.3'
     }
 }
