--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,3 +1,6 @@
 project(":domain"){
+    dependencies{
+        compile group: 'org.apache.kafka', name: 'kafka_2.11', version: '0.10.0.0'
+    }
 
 }
