--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,3 +1,12 @@
 project(":database"){
+    dependencies{
+        compile project(":domain")
+        compile project(":messaging")
+        compile 'org.neo4j.driver:neo4j-java-driver:1.0.3'
+    }
 
+    apply plugin: 'application'
 }
+
+
+
