method skeleton for buy,addfounds and db, DONE

--- a/account_manager/build.gradle
+++ b/account_manager/build.gradle
@@ -1,7 +1,7 @@
-project(":domain") {
-
+project(":account_manager") {
     dependencies {
-
-
+        compile project(":domain")
+        compile project(":messaging")
     }
+
 }
